Mon May 19 22:02:52 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (FindnSaveBestMoves): force evaluation for accept=1 and 
	cMoves=1.
	(reported by Michael Depreli)

Mon May 19 21:32:24 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseSnowieTxt): use strsep instead of strtok
	to allow blank fields
	(reported by Michael Depreli)

Mon May 19 19:59:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (Confirm): use FormatMovePlain to avoid translation
	of "off" to, say, "af".
	(reported by Klaus Rindholt)

Sun May 18 13:35:40 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (outputx): revert previous fix.
	* gnubg.c (output): this function seems to be the correct place
	to flush.
	(suggested by Henrik Ravn)

Sun May 18 12:50:43 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (outputx): add fflush.
	(suggested by Henrik Ravn)

Fri May 16 10:00:54 2003  Joern Thyssen  <jth@gnubg.org>

	Fix problems with _af_ulaw2linear in Redhat 9 
	(reported by Rod Roark)

	* configure.in, m4/audiofile.m4: autoconf magic for audiofile
	* sound.c: define _af_ulaw2linear if the user doesn't have audiofile.

Thu May 15 19:20:03 2003  Joern Thyssen  <jth@gnubg.org>

	* bearoff.c (BearoffDumpOneSided): fix bug in reported EPC.
	(reported by Ian Shaw)

Thu May 15 19:12:45 2003  Joern Thyssen  <jth@gnubg.org>

	* matchid.c (MatchID): fix typo
	(reported by Henrik Ravn)

Mon May 12 21:51:42 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c (CommandAnalyseMove): show progress.
	(suggested by Ned Cross)

Mon May 12 20:38:20 2003  Joern Thyssen  <jth@gnubg.org>

	Display effective pip count where available.
	(suggested by Ian Shaw)	

	* show.c (CommandShowOneSidedRollout, CommandShowOneChequer),
	bearoff.c (DumpOneSided), gtkrace.c (OSRPage, OneChequerPage):
	show effective pip count.
	* osr.c (raceProbs): calculate average rolls to bear off.

Sun May  4 22:48:47 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c (AnalyzeMove): always analyse MOVE_DOUBLEs as they are